<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- HEADERS AND TEXTS  -->
    <string name="app_name">15 Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Created by HTS studios</string>
    
    <!-- BUTTONS CONTENT DESCRIPTION-->
    <string name="Button1">Classic game</string>
    <string name="Button2">Classic game</string>
    <string name="Button3">Settings</string>
    <string name="Button4">About</string>
    <string name="Button5">Exit</string>
    
    <!-- SETTINGS STRINGS -->
    <string name="settings_title">Game Settings</string>
    <string name="prefs_other_title">Other</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="sound_title">Sound</string>
    <string name="sound_summary">Play sounds</string>
    <string name="prefs_gameplay_title">Gameplay</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="difficulty_summary">Choose your level of difficulty</string>
    <string name="view_title">Board View</string>
    <string name="view_summary">Choose your game view</string>
    
    <!-- DIFFICULTY ARRAY STRINGS -->
    <string name="easy_label">Noob</string>
    <string name="medium_label">Let\'s rock</string>
    <string name="hard_label">Nightmare</string>
    
    <!-- VIEW ARRAY STRINGS -->
    <string name="classic_view">Classic Board</string>
    <string name="moscow_view">Moscow Olympics 80</string>
    <string name="beauty_view">Medieval Nature</string>
    <string name="custom_view">Your Picture</string>
</resources>
