<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tileMode="repeat"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/hello_world" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:contentDescription="@string/Button4"
        android:scaleType="centerInside"
        android:src="@drawable/about" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:background="@null"
        android:contentDescription="@string/Button1"
        android:scaleType="centerInside"
        android:src="@drawable/cg" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:contentDescription="@string/Button3"
        android:scaleType="centerInside"
        android:src="@drawable/set" />

</RelativeLayout>